# ears-bridge

./: .gitattributes  .gitignore  BRANCHES.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
.claude/agents/: code-verifier.md  measurement-gap-finder.md
.github/workflows/: ci.yml  loc.yml  pages.yml  release.yml  serial-guard.yml
assets/: loc-history.json  make_banner.py  make_diagram.py  make_headers.py
docs/: EARS_DIRAC_CLIPPING_AUDIT.md  GUIDesignGuide.md  READMEDESIGNGUIDE.md  bench-validation-runbook.md
docs/gui-redesign/: apple-tokens.md  design-notes.md  mockup-a.html  mockup-b-scaffold.html  mockup-b.html  mockup-c.html  prototype.html  redesign-A-instrument.html  redesign-B-guided.html  redesign-W1-fullscreen.html  redesign-W2-spine.html  redesign-W3-checklist.html  redesign-final.html  redesign-state-firstrun.html  redesign-state-measuring.html  sp3-A-details.html  sp3-B-healthstrip.html
docs/research/: 2026-06-22-ddrc-24-hardware-dirac-compatibility.md
docs/superpowers/plans/: 2026-06-13-ears-bridge-plan1-dsp-core.md  2026-06-14-ears-bridge-plan2-audio-engine.md  2026-06-14-ears-bridge-plan3-gui.md  2026-06-14-ears-bridge-plan4-health-macos-bench.md  2026-06-16-clip-statistics.md  2026-06-16-clipping-review-fixes.md  2026-06-16-confirmed-clipping-detection.md  2026-06-16-d2-raw-rail-capture.md  2026-06-16-d5-measurement-session.md  2026-06-16-d6-frozen-src-ratio.md  2026-06-16-d7-combine-mode-gating.md  2026-06-16-d8-runtime-format-revalidation.md  2026-06-16-d9-preclamp-output-clip.md  (+8 more)
installer/: ears-bridge.iss  make_icon.py  make_installer_art.py  prerequisites.txt
site/: demo.html  faq.html  guide.html  index.html  llms.txt  robots.txt  sitemap.xml
site/assets/: jazzi-overall-dirac-target.txt
site/preview/: glass.html
src/: Main.cpp
src/audio/: AsioFallback.cpp  AsioFallback.h  AudioEngine.cpp  AudioEngine.h  CalBinder.cpp  CalBinder.h  CalibrationGeneration.h  ClockBridge.cpp  ClockBridge.h  CombineMode.h  Deconvolver.cpp  Deconvolver.h  DeviceConfigCheck.h  DeviceId.cpp  DeviceId.h  DeviceManager.cpp  DeviceManager.h  EngineTypes.h  FirTaps.h  FreezeGate.h  HardwareDiracDetect.h  HealthMonitor.cpp  HealthMonitor.h  Hysteresis.h  LoopbackReference.cpp  LoopbackReference.h  LrVerify.cpp  LrVerify.h  MeasurementSession.cpp  MeasurementSession.h  ModelDetect.cpp  ModelDetect.h  NoiseFloorMath.h  NoiseFloorTracker.h  PolyphaseResampler.h  ProcessingGraph.cpp  ProcessingGraph.h  RefMonitor.h  ReferenceGradePoller.cpp  ReferenceGradePoller.h  (+6 more)
src/cal/: CalFile.cpp  CalFile.h  CalibrationPairValidator.cpp  CalibrationPairValidator.h  FirDesigner.cpp  FirDesigner.h
src/diag/: DiagnosticLog.cpp  DiagnosticLog.h
src/gui/: CalSlotComponent.cpp  CalSlotComponent.h  CaptureCard.cpp  CaptureCard.h  ClipStatus.h  ConnectHints.h  Copy.h  CurveThumbnail.cpp  CurveThumbnail.h  DeviceNameDistill.h  DevicePicker.cpp  DevicePicker.h  DisclosureRow.cpp  DisclosureRow.h  FormatCluster.h  Glyphs.h  GradeBandSmoother.h  GradeGuards.h  GradeMetricDotsView.h  HigScore.cpp  HigScore.h  HigThresholds.h  IrQualityStatus.h  LevelMeter.cpp  LevelMeter.h  LiveInputStatus.h  MainComponent.cpp  MainComponent.h  MotionRamp.h  PlotMath.h  RateMenu.h  RawRailStatus.h  SignalChainView.h  SnrStatus.h  StartGate.h  StartNotes.h  StatusLadder.h  SystemA11y.h  Theme.cpp  Theme.h  (+6 more)
src/net/: UpdateChecker.cpp  UpdateChecker.h
src/platform/: AggregateDevice.cpp  AggregateDevice_mac.h  AggregateDevice_mac.mm  DiracCompat.cpp  DiracCompat.h  EndpointFormat.cpp  EndpointFormat.h  EndpointFormat_mac.mm  EndpointUid.cpp  EndpointUid.h  EndpointUid_mac.mm  OutputActivity.cpp  OutputActivity.h  SystemA11y.cpp
src/state/: Settings.cpp  Settings.h
src/tools/: eb_diag_main.cpp
tests/: CMakeLists.txt  diag_clockbridge.cpp  test_asiofallback.cpp  test_audioengine.cpp  test_audioengine_callbacks.cpp  test_bandedreg.cpp  test_calbinder.cpp  test_calfile.cpp  test_calibratestage.cpp  test_calpairvalidator.cpp  test_calslot.cpp  test_clipstatus.cpp  test_clockbridge.cpp  test_clockbridge_resampler.cpp  test_clockbridge_transport.cpp  test_combinegate.cpp  test_connectstage_fit.cpp  test_copystyle.cpp  test_curvethumbnail.cpp  test_deconvolver.cpp  test_designtokens.cpp  test_deviceconfigcheck.cpp  test_deviceid.cpp  test_devicemanager.cpp  test_diagnosticlog.cpp  test_disclosurerow.cpp  test_distill.cpp  test_endpointformat.cpp  test_endpointuid.cpp  test_firdesigner.cpp  test_formatcluster.cpp  test_freezegate.cpp  test_graderings.cpp  test_gradesmoother.cpp  test_hardwarediracdetect.cpp  test_healthmonitor.cpp  test_hig_layout.cpp  test_hig_parity.cpp  test_hig_score.cpp  test_hysteresis.cpp  (+39 more)
tests/data/: L_HEQ_0000000.txt  L_HEQ_8604350.txt  L_HPN_0000000.txt  L_HPN_8604350.txt  L_RAW_0000000.txt  R_HEQ_0000000.txt  R_HEQ_8604350.txt  R_HPN_0000000.txt  R_HPN_8604350.txt
tests/fixtures/hig/: clip.descriptor.json  clip.expected.json  contrast-spread.descriptor.json  contrast-spread.expected.json  custom-node.descriptor.json  gen.mjs  identical-overlapping.descriptor.json  identical-overlapping.expected.json  identical-stacked.descriptor.json  identical-stacked.expected.json  nested.descriptor.json  overlap-2px.descriptor.json  overlap-3px.descriptor.json  overlap-3px.expected.json  state-disabled-louder-alpha.descriptor.json  state-disabled-louder-alpha.expected.json  state-disabled-louder.descriptor.json  state-disabled-louder.expected.json  state-grid-diff.descriptor.json  state-hue-swap.descriptor.json  state-inert-2.descriptor.json  state-inert-2.expected.json  state-inert-3-primary.descriptor.json  state-inert-3-primary.expected.json  state-inert-3.descriptor.json  state-inert-3.expected.json  state-low-alpha.descriptor.json  state-styled.descriptor.json  state-tolerance-edge.descriptor.json  state-tolerance-edge.expected.json  target-sub24.descriptor.json  target-sub24.expected.json
tests/sim/: SimSignals.h  VirtualDevices.h  VirtualSession.h
tools/: build-installer-mac.sh  build-installer.cmd  dev.cmd  dev.ps1  loc-graph.mjs
tools/git-hooks/: pre-commit
(+18 files in other folders)
